apps/staging/gateway/alertmanager-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager-vs
spec:
  gateways:
    - istio-system/gateway
  hosts:
    - alertmanager.demo.lab
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 9093
            host: alertmanager-operated.observability.svc.cluster.local
