apps/staging/gateway/grafana-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
spec:
  gateways:
    - istio-system/gateway
  hosts:
    - grafana.demo.lab
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: kube-prometheus-stack-grafana.observability.svc.cluster.local
