apps/staging/gateway/tracing-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-vs
spec:
  gateways:
    - istio-system/gateway
  hosts:
    - tracing.demo.lab
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 16686
            host: jaeger-operator-jaeger-query.observability.svc.cluster.local
